# cognitive-evolve

./: .coveragerc  .env.example  .env.fixture.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LOCAL_RUNTIME_BOUNDARY.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  Start CognitiveEvolve.command  pyproject.toml  sitecustomize.py
.codemap/: config.json
.github/: PULL_REQUEST_TEMPLATE.md
cognitive_evolve_runtime/: __init__.py  commands.py  config_templates.py  configuration.py  doctor.py  runtime.py
docs/: AGENT_SYSTEM_PARADIGM.md  ARCHITECTURE_BOUNDARIES.md  ARCHITECTURE_DEBT_LANDING_2026_06_14.md  AUDIT_FIXES_2026_05_29.md  CONFIG_ARCHITECTURE.md  CORE_EVOLVE_ALGORITHM.md  M5_1_BETA_DURABLE_LATENT_LEDGER_PLAN.md  M5_1_LATENT_OBJECTIVE_EVOLUTION_PLAN.md  M6_2_THEORY_INTEGRATION_FULL_LANDING_PLAN.md  NEXUS_API_RUNTIME_FIX.md  NEXUS_CONTEXT_COMPRESSION.md  NEXUS_EXPLORATION_RECOVERY.md  NEXUS_IMPLEMENTATION_STATUS.md  NEXUS_LEGACY_CAPABILITY_MIGRATION.md  NEXUS_PROOF_PROGRESS_HARDENING.md  NEXUS_RUNTIME_DESIGN.md  NEXUS_RUNTIME_PURITY_AUDIT.md  PROVIDER_MATRIX.md  RELEASE_PROVENANCE.md  ROADMAP.md  SELF_BOOTSTRAP_LOOP_PROTOCOL.md  SELF_EVOLVE_RUN_PLAN_2026_06_02.md  V2_2_1_TECH_DEBT_AUDIT.md
scripts/: build-self-evolve-goal.py  cogev.py  cogev_api_smoke.py  launch-core-self-evolve-openai-screen.sh  package_clean.sh  run-core-self-evolve-openai.py  run-core-self-evolve-openai.sh  start-cognitive-evolve-api.sh
tests/: conftest.py  test_activation_and_bias_control.py  test_active_evidence_obligation_ledger.py  test_api_bounded_executor.py  test_api_key_not_loaded_from_home.py  test_api_public_contract.py  test_architecture_boundaries.py  test_architecture_debt_refactor.py  test_archive_manager_fates.py  test_auxiliary_candidate_not_main_winner_by_default.py  test_bootstrap_entry_survival.py  test_ca_crossover.py  test_candidate_fate_semantics.py  test_candidate_genome_roundtrip.py  test_commands_contract.py  test_concurrent_verify.py  test_config_hermetic_no_home_env.py  test_context_security_boundaries.py  test_context_selector_path_resolution.py  test_core_self_evolve_runner_preflight.py  test_current_architecture_contracts.py  test_direct_http_provider.py  (+102 more)
(+404 files in other folders)
