[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitive-evolve-agent-system"
version = "2.0.0"
description = "Nexus-only model-driven offline evolution runtime with structured candidate genomes, multihead ranking, archives, and local verification."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "CognitiveEvolve contributors" }]
keywords = ["agents", "evaluation", "prompt-optimization", "cognitive-architecture", "workflow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10,<3.15"
dependencies = [
  "litellm>=1.60.0",
  "pydantic>=2.7.0",
  "tenacity>=8.2.0",
  "jsonschema>=4.22.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage>=7.0",
  "pytest-asyncio>=0.24"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-p no:ddtrace -p no:json-report -p no:metadata -p no:Faker"

[tool.setuptools.package-data]
cognitive_evolve_runtime = ["py.typed"]

[tool.setuptools.packages.find]
include = ["cognitive_evolve_runtime*"]

[tool.cogev]
source_role = "agent_system_source_project"
public_install_protocol = "stable_public_clean_archive"
default_standalone_runtime_root = "~/.cognitive-evolve"
openai_compatible_api = true
frontend_ready = true
runtime_authority = "nexus"
alternate_runtime_backends = []
external_integration_boundary = "adapters_only_no_alternate_runtime"
llm_required = true
no_llm_fallback_allowed = true
required_external_backends = ["llm"]

[project.scripts]
cogev = "cognitive_evolve_runtime.commands:main"
cogev-api = "cognitive_evolve_runtime.api.server:serve"
